--- a/app.json
+++ b/app.json
@@ -1,12 +1,31 @@
 {
     "pages": [
-        "pages/index/index"
+        "pages/index/index",
+        "pages/home/index"
     ],
     "window": {
         "backgroundTextStyle": "light",
         "navigationBarBackgroundColor": "#fff",
         "navigationBarTitleText": "日语学习",
         "navigationBarTextStyle": "black"
+    },
+    "tabBar": {
+        "color": "#333",
+        "selectedColor": "#2db42d",
+        "list": [
+            {
+                "pagePath": "pages/index/index",
+                "text": "首页",
+                "iconPath": "images/list.png",
+                "selectedIconPath": "images/list-fill.png"
+            },
+            {
+                "pagePath": "pages/home/index",
+                "text": "个人",
+                "iconPath": "images/home.png",
+                "selectedIconPath": "images/home-fill.png"
+            }
+        ]
     },
     "style": "v2",
     "renderer": "skyline",
